--- a/components/panel-channel/index.html
+++ b/components/panel-channel/index.html
@@ -78,6 +78,7 @@
         input[type="search"] {
             width: 37vw;
             height: 10vh;
+            line-height: 10vh;
             margin-bottom: 2vh;
             padding: 0 10px;
             border:1px solid rgba(100,100,100,0.1);
