--- a/components/song-face/index.html
+++ b/components/song-face/index.html
@@ -18,7 +18,7 @@
                 cursor: pointer;
                 transition: all 0.4s ease-in;
                 background-repeat: no-repeat;
-                background-center: center center;
+                background-position: center center;
                 background-size: cover;
             }
 
