--- a/components/song-lyric/desktop.html
+++ b/components/song-lyric/desktop.html
@@ -11,7 +11,7 @@
 			margin: 0;
 			color: #fff;
 			border-radius: 5px;
-			background: rgba(0,0,0,0.0);
+			background: rgba(0,0,0, 0.2);
 		}
 
 		h1 {
@@ -20,6 +20,7 @@
 			text-align: center;
 			font-family: Papyrus,Skia, STKaiti, sans-serif;
 			color: #fff;
+            /*color: #000;*/
 			text-shadow: 2px 2px 5px rgba(0,0,0,0.9);
 		}
 
@@ -29,7 +30,7 @@
 
 		@font-face {
 			font-family: 'iconfont';
-			src: url('http://at.alicdn.com/t/font_1417803989_9863071.woff') format('woff') /* chrome、firefox */
+            src: url('http://at.alicdn.com/t/font_1417803989_9863071.woff') format('woff')
 		}
 
 		.toolbar i {
@@ -62,10 +63,49 @@
 </head>
 <body style="-webkit-app-region: drag">
 <h1 style="font-size:18px;">歌词加载中...</h1>
-<div class="toolbar">
+<div class="toolbar" style="-webkit-app-region: no-drag">
 	<i>&#xe605;</i>
 	<i>&#xe604;</i>
 	<i>&#xe602;</i>
 </div>
+<script>
+    var doc = document
+    var h1 = doc.querySelector('h1')
+    var btns = doc.querySelectorAll('.toolbar i')
+
+    var remote = require('remote')
+    var win = remote.getCurrentWindow()
+    var ipc = require('ipc')
+
+    ipc.on('LYRIC:INIT', function(fontSize) {
+        if(fontSize) {
+            h1.style.fontSize = fontSize + 'px'
+        }
+    })
+
+    ipc.on('LYRIC_TEXT:UPDATE', function(text) {
+        h1.textContent = text
+    })
+
+    //加大字体
+    btns[0].addEventListener('click', function () {
+        var fontSize = parseFloat(h1.style.fontSize) * 1.2
+        h1.style.fontSize = fontSize + 'px'
+        ipc.send('DESKTOP_LYRIC:fontSize', fontSize)
+    })
+
+    //减小字体
+    btns[1].addEventListener('click', function () {
+        var fontSize = parseFloat(h1.style.fontSize) / 1.2
+        h1.style.fontSize = fontSize + 'px'
+        ipc.send('DESKTOP_LYRIC:fontSize', fontSize)
+    })
+
+    //关闭歌词
+    btns[2].addEventListener('click', function () {
+        win.hide()
+        ipc.send('DESKTOP_LYRIC:HIDE')
+    })
+</script>
 </body>
 </html>
