--- a/components/song-lyric/index.html
+++ b/components/song-lyric/index.html
@@ -54,12 +54,13 @@
                         var lines = self.lrc
                         for (i = 0; i < lines.length; i++) {
                             if (playTime < lines[i].time) {
-                                FM.obs.emit('LYRIC_TEXT:UPDATE', lines[i-1 < 0 ? 0 : i -1].text || '~~~~')
+                                var text = lines[i-1 < 0 ? 0 : i -1].text || '~~~~'
+                                self.win.webContents.send('LYRIC_TEXT:UPDATE', text)
                                 return
                             }
                         }
                     } else {
-                        FM.obs.emit('LYRIC_TEXT:UPDATE', '暂无歌词')
+                        self.win.webContents.send('LYRIC_TEXT:UPDATE', '暂无歌词')
                     }
                 }
             },
@@ -124,68 +125,53 @@
             createWindow : function() {
                 var self = this
                 var status = FM.cache.get('CACHE:DESKTOP_LYRIC',{})
-                var win = require('nw.gui').Window.open('components/song-lyric/desktop.html', {
-                    position: 'center',
+                var remote = require('remote')
+                var BrowserWindow = remote.require('browser-window')
+                var win = new BrowserWindow({
+                    center: true,
                     width: status.width || 800,
                     height: status.height || 50,
                     x : status.x || (window.screen.width - 800)/2,
                     y : status.y || (window.screen.height - 50 - 80),
-                    "frame": false,
+                    frame: false,
                     "transparent": true
-                });
+                })
 
-                win.on('move', function(x, y) {
-                    status.x = x
-                    status.y = y
+                self.win = win
+                win.loadUrl('file://' + __dirname + '/components/song-lyric/desktop.html')
+
+                win.on('move', function(e) {
+                    var pos = win.getPosition()
+                    status.x = pos[0]
+                    status.y = pos[1]
                     FM.cache.set('CACHE:DESKTOP_LYRIC', status)
                 })
 
-                win.on('resize', function(w, h) {
-                    status.width = w
-                    status.height = h
+                win.on('resize', function(e) {
+                    var size = win.getSize()
+                    status.width = size[0]
+                    status.height = size[1]
                     FM.cache.set('CACHE:DESKTOP_LYRIC', status)
                 })
 
                 win.setAlwaysOnTop(true)
 
-                win.on('loaded', function() {
-                    var doc = win.window.document
-                    var h1 = doc.querySelector('h1')
-                    var btns = doc.querySelectorAll('.toolbar i')
+                win.webContents.on('did-finish-load', function() {
+                    win.webContents.send('LYRIC:INIT', JSON.stringify(status.fontSize))
+                })
 
-                    if (status.fontSize) {
-                        h1.style.fontSize = status.fontSize + 'px'
-                    }
+                var ipc = remote.require('ipc')
+                ipc.on('DESKTOP_LYRIC:fontSize', function(event, fontSize) {
+                    status.fontSize = fontSize
+                    FM.cache.set('CACHE:DESKTOP_LYRIC', status)
+                })
 
-                    FM.obs.on('LYRIC_TEXT:UPDATE', function (text) {
-                        h1.textContent = text
+                ipc.on('DESKTOP_LYRIC:HIDE', function() {
+                    FM.config.lyric = !FM.config.lyric
+                    FM.obs.emit('CONFIG:UPDATE', {
+                        type: 'lyric'
                     })
-
-                    //加大字体
-                    btns[0].addEventListener('click', function () {
-                        var fontSize = parseFloat(h1.style.fontSize) * 1.2
-                        h1.style.fontSize = fontSize + 'px'
-                        status.fontSize = fontSize
-                        FM.cache.set('CACHE:DESKTOP_LYRIC', status)
-                    })
-
-                    //减小字体
-                    btns[1].addEventListener('click', function () {
-                        var fontSize = parseFloat(h1.style.fontSize) / 1.2
-                        h1.style.fontSize = fontSize + 'px'
-                        status.fontSize = fontSize
-                        FM.cache.set('CACHE:DESKTOP_LYRIC', status)
-                    })
-
-                    //关闭歌词
-                    btns[2].addEventListener('click', function () {
-                        win.hide()
-                        FM.config.lyric = !FM.config.lyric
-                        FM.obs.emit('CONFIG:UPDATE', {
-                            type: 'lyric'
-                        })
-                    })
-                },0)
+                })
 
                 return win
             }
