--- a/components/panel-setting/index.html
+++ b/components/panel-setting/index.html
@@ -51,6 +51,7 @@
             input {
                 width: 50%;
                 height: 20px;
+                line-height: 20px;
                 border: 1px solid rgba(0,0,0,0.2);
                 background: rgba(255,255,255,0.4);
                 text-indent: 5px;
@@ -87,7 +88,7 @@
         </style>
         <div class="setting">
             <section class="hot-key">
-                <h3 title="注意：由于node-webkit本身的原因，无法检测Command组合键，设置时请选择CTRL/ALT作为主按键, 如果按键中有CTRL键，在使用时需要按Command键调用"><i class="iconfont">&#xe64b;</i>热键设置</h3>
+                <h3>热键设置</h3>
                 <div>
                     <p>
                         <label>暂停/播放</label>
@@ -108,6 +109,14 @@
                     <p>
                         <label>下一首</label>
                         <input name="NEXT" placeholder="无" on-keydown="{{recordKey}}" on-blur="{{setKey}}" value="{{config.hotKey.NEXT}}" />
+                    </p>
+                    <p>
+                        <label>增加音量</label>
+                        <input name="VOLUP" placeholder="无" on-keydown="{{recordKey}}" on-blur="{{setKey}}" value="{{config.hotKey.VOLUP}}" />
+                    </p>
+                    <p>
+                        <label>减小音量</label>
+                        <input name="VOLDOWN" placeholder="无" on-keydown="{{recordKey}}" on-blur="{{setKey}}" value="{{config.hotKey.VOLDOWN}}" />
                     </p>
                     <p>
                         <label>收听相似歌曲</label>
@@ -198,6 +207,7 @@
             var self = this
             var target = e.currentTarget
             var key = self.getPressKey(e).trim()
+            if(key == 'tab') return
             target.value = key
             target.dataset.key = key
         },
@@ -208,6 +218,7 @@
             var target = e.currentTarget
             var name = target.name
             var key = target.dataset.key
+            if(key == 'tab') return
             if(key  && (key != FM.config.hotKey[name])) {
                 FM.config.hotKey[name] = key
                 FM.obs.emit('CONFIG:UPDATE', {type : 'hotKey', name : name, key : key})
@@ -237,7 +248,7 @@
             }
             keys.forEach(function(o, i) {
                 var s = o.split('')
-                s[0] = s[0].toUpperCase()
+                s[0] = s[0].toLowerCase()
                 keys[i] = s.join('')
             })
             return keys.join('+')
