--- a/components/x-mask/index.html
+++ b/components/x-mask/index.html
@@ -1,6 +1,135 @@
 <polymer-element name="x-mask">
     <template>
-        <content select="*"></content>
+        <style>
+            .Cube {
+                width: 80px;
+                height: 80px;
+                line-height: 80px;
+                text-align: center;
+                font-size: 50px;
+                -webkit-transform-style: preserve-3d;
+                transform-style: preserve-3d;
+                -webkit-transition: -webkit-transform 0.5s 0.1s;
+                transition: transform 0.5s 0.1s;
+                perspective: 9999px;
+                color: #333;
+                margin: 0 auto;
+                position: absolute;
+                left: 50%;
+                margin-left: -37px;
+                top: 65px;
+                opacity: 1;
+            }
+
+            .panelLoad {
+                z-index: 11;
+                top: 50%;
+                margin-top: -60px;
+                -webkit-animation: panel 2.2s infinite forwards;
+                animation: panel 2.2s infinite forwards;
+            }
+
+            .cube-face {
+                color: black;
+                box-shadow: inset 0 0 0 1px #111, 0 0 1px 1px #111;
+            }
+
+            .cube-face {
+                width: inherit;
+                height: inherit;
+                position: absolute;
+                background: white;
+                box-shadow: inset 0 0 0 1px #333, 0 0 1px 1px #333;
+                opacity: 1;
+            }
+
+            .cube-face-front {
+                transform: translate3d(0, 0, 40px);
+                -webkit-transform: translate3d(0, 0, 40px);
+                font-size: 57px;
+                background-color:#7EEBB4;
+            }
+
+            .cube-face-back {
+                -webkit-transform: rotateY(180deg) translate3d(0, 0, 40px);
+                transform: rotateY(180deg) translate3d(0, 0, 40px);
+                background-color:#F14457;
+            }
+
+            .cube-face-left {
+                -webkit-transform: rotateY(-90deg) translate3d(0, 0, 40px);
+                transform: rotateY(-90deg) translate3d(0, 0, 40px);
+                background-color:#FF9BBD;
+            }
+
+            .cube-face-right {
+                -webkit-transform: rotateY(90deg) translate3d(0, 0, 40px);
+                transform: rotateY(90deg) translate3d(0, 0, 40px);
+                background-color: #FCB438;
+            }
+
+            .cube-face-top {
+                -webkit-transform: rotateX(90deg) translate3d(0, 0, 40px);
+                transform: rotateX(90deg) translate3d(0, 0, 40px);
+                background-color: #6BD0F8;
+            }
+
+            .cube-face-bottom {
+                -webkit-transform: rotateX(-90deg) translate3d(0, 0, 40px);
+                transform: rotateX(-90deg) translate3d(0, 0, 40px);
+                background-color: #FAF7F3;
+            }
+
+            @-webkit-keyframes panel {
+                0% {
+                    -webkit-transform: rotateY(0deg) rotateZ(0deg);
+                }
+                20% {
+                    -webkit-transform: rotateY(90deg) rotateZ(0deg);
+                }
+                40% {
+                    -webkit-transform: rotateX(45deg) rotateZ(45deg);
+                }
+                60% {
+                    -webkit-transform: rotateX(90deg) rotateY(180deg) rotateX(90deg);
+                }
+                80% {
+                    -webkit-transform: rotateX(310deg) rotateZ(230deg);
+                }
+                100% {
+                    -webkit-transform: rotateX(360deg) rotateZ(360deg);
+                }
+            }
+
+            @keyframes panel {
+                0% {
+                    -webkit-transform: rotateY(0deg) rotateZ(0deg);
+                }
+                20% {
+                    -webkit-transform: rotateY(90deg) rotateZ(0deg);
+                }
+                40% {
+                    -webkit-transform: rotateX(45deg) rotateZ(45deg);
+                }
+                60% {
+                    -webkit-transform: rotateX(90deg) rotateY(180deg) rotateX(90deg);
+                }
+                80% {
+                    -webkit-transform: rotateX(310deg) rotateZ(230deg);
+                }
+                100% {
+                    -webkit-transform: rotateX(360deg) rotateZ(360deg);
+                }
+            }
+        </style>
+        <div class='Cube panelLoad'>
+            <div class='cube-face cube-face-front'>fr</div>
+            <div class='cube-face cube-face-back'>o2</div>
+            <div class='cube-face cube-face-left'>O</div>
+            <div class='cube-face cube-face-right'>N</div>
+            <div class='cube-face cube-face-bottom'>T</div>
+            <div class='cube-face cube-face-top'>#</div>
+        </div>
     </template>
     <script>
         Polymer('x-mask',{
