--- a/components/x-channel/index.html
+++ b/components/x-channel/index.html
@@ -143,13 +143,8 @@
                 //红心频道需要登录
                 if(self.channel.id == -3) {
                     if(!FM.cache.get('CACHE:USER')) {
-                        self.channel.originName = self.channel.name
-                        self.channel.name = self.channel.name + '(未登录)'
-
-                        FM.obs.on('LOGIN:UPDATE', function() {
-                            self.channel.name = self.channel.originName
-                            FM.obs.emit('CHANNEL:UPDATE', self.channel)
-                        })
+                       document.querySelectorAll('.nav li')[2].click() 
+                        return
                     }
                 }
 
