--- a/components/x-mask/index.html
+++ b/components/x-mask/index.html
@@ -123,12 +123,12 @@
             }
         </style>
         <div class='Cube panelLoad'>
-            <div class='cube-face cube-face-front'>fr</div>
-            <div class='cube-face cube-face-back'>o2</div>
-            <div class='cube-face cube-face-left'>O</div>
-            <div class='cube-face cube-face-right'>N</div>
-            <div class='cube-face cube-face-bottom'>T</div>
-            <div class='cube-face cube-face-top'>#</div>
+            <div class='cube-face cube-face-front'>T</div>
+            <div class='cube-face cube-face-back'>i</div>
+            <div class='cube-face cube-face-left'>m</div>
+            <div class='cube-face cube-face-right'>o</div>
+            <div class='cube-face cube-face-bottom'>F</div>
+            <div class='cube-face cube-face-top'>M</div>
         </div>
     </template>
     <script>
