--- a/components/x-view/index.html
+++ b/components/x-view/index.html
@@ -19,7 +19,7 @@
         </style>
         <div>
             <a class="iconfont c1" title="最小化" on-click="{{min}}">&#xe635;</a>
-            <!--<a class="iconfont" title="打开控制台" on-click="{{showDevTools}}">&#xe638;</a>-->
+            <a class="iconfont" title="打开设置" on-click="{{showSetting}}">&#xe638;</a>
             <a class="iconfont c1" title="关闭" on-click="{{close}}">&#xe619;</a>
         </div>
     </template>
@@ -122,6 +122,9 @@
                 } else {
                     return  path + 'blank_tray.png'
                 }
+            },
+            showSetting : function() {
+                document.querySelector('song-face').classList.add('hover')
             }
         })
     </script>
