--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -84,6 +84,7 @@ main {
     right: 0;
     top: 0;
     bottom: 0;
+    -webkit-app-region: drag;
 }
 
 main song-player {
@@ -92,6 +93,7 @@ main song-player {
     right: 0;
     bottom: 10vh;
     text-align: center;
+    -webkit-app-region: no-drag;
 }
 
 song-face {
@@ -103,6 +105,7 @@ song-face {
     width: 50%;
     transform-origin: right center 0px;
     transition: all 0.4s ease-in;
+    -webkit-app-region: no-drag;
 }
 
 song-face.hover {
@@ -113,6 +116,7 @@ x-view {
     position: absolute;
     right: 6px;
     top: 5px;
+    -webkit-app-region: no-drag;
 }
 
 x-mask {
