--- a/components/song-lyric/index.html
+++ b/components/song-lyric/index.html
@@ -135,7 +135,7 @@
                     x : status.x || (window.screen.width - 800)/2,
                     y : status.y || (window.screen.height - 50 - 80),
                     frame: false,
-                    "transparent": true
+                    //"transparent": true
                 })
 
                 self.win = win
