--- a/components/song-lyric/desktop.html
+++ b/components/song-lyric/desktop.html
@@ -11,7 +11,8 @@
 			margin: 0;
 			color: #fff;
 			border-radius: 5px;
-			background: rgba(0,0,0, 0.2);
+			background: rgba(0,0,0, 0.5);
+			-webkit-app-region: drag;
 		}
 
 		h1 {
@@ -44,30 +45,38 @@
 			text-shadow: 1px 1px 1px rgba(0,0,0,0.8);
 		}
 
-		.toolbar i:hover {
-			color: #ff0000;
-		}
-
 		.toolbar {
 			position: absolute;
 			display: none;
+			opacity: 0.1;
 			right: 0;
 			top: 3px;
 		}
 
 		body:hover .toolbar {
 			display: block;
+			opacity:1;
+		}
+
+		body.not-osx .toolbar {
+			display: block;
+			-webkit-app-region: no-drag;	
 		}
 
 	</style>
 </head>
-<body style="-webkit-app-region: drag">
+<body>
 <h1 style="font-size:18px;">歌词加载中...</h1>
 <div class="toolbar" style="-webkit-app-region: no-drag">
 	<i>&#xe605;</i>
 	<i>&#xe604;</i>
 	<i>&#xe602;</i>
 </div>
+<script>
+if(process.platform != 'darwin') {
+    document.body.classList.add('not-osx')
+}
+</script>
 <script>
     var doc = document
     var h1 = doc.querySelector('h1')
