--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -12,7 +12,7 @@ ul, li {
 }
 
 body {
-    font-family: Skia, STKaiti, sans-serif;
+    font-family: 'Microsoft YaHei', Skia, STKaiti, sans-serif;
     background: #fff;
     transition: background 0.4s ease-in;
     -webkit-app-region: drag;
