将黑色托盘图标用于非 Windows 系统

--- a/components/song-player/index.html
+++ b/components/song-player/index.html
@@ -458,7 +458,7 @@
             require('remote').getCurrentWindow().setThumbarButtons([
                 {
                     tooltip: '加红心',
-                    icon: path + (self.song.like ? 'red_tray@2x.png' : 'blank_tray@2x.png'),
+                    icon: path + (self.song.like ? 'red_like.png' : 'white_like.png'),
                     click: self.star.bind(self)
                 },
                 {
