--- a/components/song-lyric/index.html
+++ b/components/song-lyric/index.html
@@ -135,7 +135,10 @@
                     x : status.x || (window.screen.width - 800)/2,
                     y : status.y || (window.screen.height - 50 - 80),
                     frame: false,
-                    //"transparent": true
+                    transparent: true,
+                    skipTaskbar: true,
+                    resizable: false,
+                    closable: false
                 })
 
                 self.win = win
@@ -148,12 +151,6 @@
                     FM.cache.set('CACHE:DESKTOP_LYRIC', status)
                 })
 
-                win.on('resize', function(e) {
-                    var size = win.getSize()
-                    status.width = size[0]
-                    status.height = size[1]
-                    FM.cache.set('CACHE:DESKTOP_LYRIC', status)
-                })
 
                 win.setAlwaysOnTop(true)
 
