将白色托盘图标用于非 OS X 系统

--- a/components/x-view/index.html
+++ b/components/x-view/index.html
@@ -121,8 +121,8 @@
                 if(song.like) {
                     return path + 'red_tray.png'
                 } else {
-                    return  path + (require('os').type() === 'Windows_NT' ?
-                                   'white_tray.png' : 'blank_tray.png')
+                    return  path + (require('os').type() === 'Darwin' ?
+                                    'blank_tray.png' : 'white_tray.png')
                 }
             },
             showSetting : function() {
